--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@plaiceholder/next": "^2.1.0",
     "framer-motion": "^4.1.17",
     "keen-slider": "^5.5.1",
     "next": "11.1.2",
+    "plaiceholder": "^2.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "sharp": "^0.29.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
