--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@plaiceholder/next": "^2.1.0",
+    "@prismicio/client": "^5.1.0",
+    "date-fns": "^2.23.0",
     "framer-motion": "^4.1.17",
     "keen-slider": "^5.5.1",
     "next": "11.1.2",
     "plaiceholder": "^2.0.1",
+    "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
