--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^4.1.17",
     "keen-slider": "^5.5.1",
     "next": "11.1.2",
+    "next-seo": "^4.28.1",
     "plaiceholder": "^2.0.1",
     "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
