--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.1",
     "sharp": "^0.29.1"
   },
   "devDependencies": {
