--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "keen-slider": "^5.5.1",
     "next": "11.1.2",
     "next-seo": "^4.28.1",
+    "nodemailer": "^6.6.5",
     "plaiceholder": "^2.0.1",
     "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
