--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@plaiceholder/next": "^2.1.0",
     "@prismicio/client": "^5.1.0",
+    "@sendgrid/mail": "^7.4.7",
     "date-fns": "^2.23.0",
     "framer-motion": "^4.1.17",
     "keen-slider": "^5.5.1",
@@ -25,6 +26,7 @@
     "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.0",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.1",
     "sharp": "^0.29.1"
